# competitive-programming-solves

atcoder/: create.sh
atcoder/abc046_b/: main.ml
atcoder/abc055_b/: main.ml
atcoder/abc057_b/: dune-project
atcoder/abc060_b/: dune-project
atcoder/abc064_c/: dune-project
atcoder/abc065_b/: main.ml
atcoder/abc066_b/: main.ml
atcoder/abc073_c/: dune-project
atcoder/abc075_b/: main.ml
atcoder/abc079_c/: main.ml
atcoder/abc088_c/: dune-project
atcoder/abc091_b/: main.ml
atcoder/abc096_c/: dune-project
atcoder/abc097_b/: main.ml
atcoder/abc098_b/: dune-project  main.ml
atcoder/abc098_b/lib/: dune
atcoder/abc098_b/test/: dune
atcoder/abc100_b/: main.ml
atcoder/abc100_c/: main.ml
atcoder/abc103_c/: main.ml
atcoder/abc106_c/: main.ml
atcoder/abc107_b/: dune-project
atcoder/abc115_c/: main.ml
atcoder/abc120_c/: main.ml
atcoder/abc121_c/: main.ml
atcoder/abc135_c/: main.ml
atcoder/abc136_c/: main.ml
atcoder/abc139_d/: main.ml
atcoder/abc144_c/: main.ml
atcoder/abc145_c/: main.ml
atcoder/abc151_c/: main.ml
atcoder/abc159_d/: dune-project
atcoder/agc004_a/: main.ml
atcoder/agc012_a/: main.ml
atcoder/agc019_a/: main.ml
atcoder/agc021_a/: main.ml
atcoder/agc029_a/: main.ml
atcoder/agc041_a/: main.ml
atcoder/arc073_a/: dune-project
atcoder/arc075_a/: dune-project
atcoder/arc082_a/: dune-project
atcoder/arc088_a/: main.ml
atcoder/arc089_a/: dune-project
atcoder/arc090_a/: main.ml
atcoder/diverta2019_b/: dune-project
atcoder/diverta2019_b/lib/: dune
atcoder/diverta2019_b/test/: dune
(+32 files in other folders)
